# hermes-desktop

./: .gitignore  AGENTS.md  Package.resolved  Package.swift  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: macos-ci.yml  tauri-ci.yml
Apps/HermesPhone/: HermesPhoneApp.swift
Sources/HermesPhoneKit/: CommonModels.swift  CoreBuildShims.swift  HermesPhoneKit.swift  NativeTerminal.swift  WebTerminal.swift
Tests/HermesDesktopTests/: AppStateUpdateCheckTests.swift  ConnectionProfileTests.swift  ConnectionStoreTests.swift  HermesChatInvocationTests.swift  LocalHermesIntegrationTests.swift  SSHTransportTests.swift  SessionMessageMetadataTests.swift  SwiftTermReflowTests.swift  TerminalViewHostTests.swift
Tests/HermesPhoneKitTests/: HermesAPIChatServiceTests.swift  HermesGatewayCoreTests.swift
docs/: CI.md  CONTROL_API.md  distribution.md
docs/releases/: README.md  RELEASE-v0.8.1.md  RELEASE-v1.1.0.md  RELEASE-v1.1.1.md  RELEASE-v1.2.0.md
packaging/: HermesDesktop.icns  Info.plist
scripts/: check-agent-headless.py  check-i18n.mjs  install-tauri-linux-deps.sh  package-github-release.sh  preflight.sh  release.mjs  session-drive.py  smoke-terminal-layout.mjs  verify-launch-side-effects.sh  verify-release.sh
scripts/githooks/: pre-push
site/: index.html
src/: api.ts  i18n.ts  main.ts  styles.css  themes.css  types.ts  update.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: connection.rs  control_server.rs  lib.rs  models.rs  session.rs  ssh.rs  storage.rs  terminal.rs
(+51 files in other folders)
